# test-web

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DUMMY.csv  README.md  index.html  package-lock.json  package.json  roadmap.md
backend/: app.py  pyproject.toml
src/: App.css  App.jsx
src/components/: InputPage.jsx  Navigation.css  Navigation.jsx  TableView.css  TableView.jsx
src/components/plots/: PlotConfigPanel.jsx  PlotDisplayArea.jsx  PlotEntryForm.jsx  PlotEntryList.jsx  PlotsPage.css  PlotsPage.jsx
src/components/plots/bitSelector/: BitSelectorWrapper.jsx  GridBitSelector.jsx
src/components/plots/charts/: ChartWrapper.jsx  PlotlyAdapter.jsx
src/constants/: plotTypes.js
src/utils/: bitOperations.js  dataTypeConverters.js  signalExtractor.js
